--- a/IntroductionToPython/08-FormattingStrings.ipynb
+++ b/IntroductionToPython/08-FormattingStrings.ipynb
@@ -8,16 +8,16 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Formatting Strings\n",
-    "These notebooks have used string concatenation and multiple arguments to `print()` to format strings. This notebook presents using  [string interpolation](https://en.wikipedia.org/wiki/String_interpolation) to put values into strings with a variety of different formats. \n",
+    "Before this notebook, we used string concatenation and multiple arguments to print() to format strings. Now, we will use [string interpolation](https://en.wikipedia.org/wiki/String_interpolation) to put values into strings in various formats.\n",
     "\n",
     "Python offers three different ways to format strings:\n",
     "- old style (all versions of Pythons) - see reference material if interested, not covered/tested\n",
     "- new style (Python 2.6 +)\n",
     "- f-strings (Python 3.6 +) - see reference material if interested, not covered/tested\n",
     "\n",
-    "The f-string style provides an easy convenience to put variables into strings, but at the cost of requiring a literal (hard-coded) value to be used as the format string in the code.  This limitation makes it harder to develop international-based applications.\n",
+    "The f-string style provides an easy convenience to put variables into strings but at the cost of requiring a literal (hard-coded) value to be used as the format string in the code.  This limitation makes it harder to develop international-based applications.\n",
     "\n",
-    "This notebook directly prints the results of the formatting, but the formatted string could be assigned to a variable or used as an expression (e.g., as an argument to a function)."
+    "This notebook directly prints the formatting results, but the formatted string could be assigned to a variable or used as an expression (e.g., as an argument to a function)."
    ]
   },
   {
@@ -33,7 +33,7 @@
    "id": "dcdb0336",
    "metadata": {},
    "source": [
-    "This format uses the form of _format_string_.format(_data_). Within each string are one of more placeholder fields identified by curly braces `{}` that will be replaced by values.\n",
+    "This format uses the form of _format_string_.format(_data_). Within each string are one or more placeholder fields identified by curly braces `{}` that values will replace.\n",
     "\n",
     "By default, the {} are replaced by data by matching order of the arguments to data - the indexing starts at zero.  Addtionally, we can also specify name arguments to the placeholders."
    ]
@@ -85,9 +85,9 @@
     "  - '^' center\n",
     "- An optional sign for numbers. If `+` is specified, a plus symbol will be added to positive numbers.  Negative numbers always have a minus sign.\n",
     "- An optional minwidth. \n",
-    "- An optional period ('.') to separate minwidth and maxchars if both are defined.  If only one is defined, assumed to be maxchars\n",
-    "- An optional maxchars.  If this is the a float type, then this specifies the precision.\n",
-    "- the type, which are the same as the old style\n",
+    "- An optional period ('.') to separate minwidth and maxchars if both values are defined.  If only one is defined, maxchars is assumed.\n",
+    "- An optional maxchars.  If this is a float type, then this specifies the precision.\n",
+    "- the type, which values are the same as the old style\n",
     "\n",
     "\n",
     "| Type | Description |\n",
@@ -163,7 +163,7 @@
    "source": [
     "Notice in the above example, the default justification is left, unless minwidth or the precision is specified where the numbers become right justified.\n",
     "\n",
-    "Variables can also be placed into the formatting placeholder by surrounding them with `{}`.  See below where we have used w and d."
+    "You can use variables in the formatting placeholder by surrounding them with `{}`.  See below where we have used w and d."
    ]
   },
   {
@@ -186,14 +186,14 @@
    "source": [
     "## Exercises\n",
     "\n",
-    "1. Develop your own business format letter with the following specifications:\n",
-    "   - It should be in a function `produce_letter` that takes any arguments needed to produce your letter\n",
-    "   - The function should return a formatted string\n",
+    "1. Develop a business format letter with the following specifications:\n",
+    "   - It should be in a function `produce_letter` that takes any arguments needed to produce your letter.\n",
+    "   - The function should return a formatted string.\n",
     "   - The string should be a multi-line string. \n",
-    "   - You should perform at least 5 formatting substitutions \n",
+    "   - You should perform at least 5 formatting substitutions.\n",
     "\n",
     "\n",
-    "2. Write a script that defines a float variable and then prints out the number in the format of \\\\$\\*\\*\\*XX.XX where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
+    "2. Write a script that defines a float variable and then prints out the number in the format of \\\\$\\*\\*\\*XX.XX, where the leading asterisks are used to make the length of the output 10 characters and the precision is two digits.\n",
     "\n",
     "\n",
     "3. Write a function with the following declaration - <code>def print_receipt(subtotal, tax_rate, tip_rate)</code><br>That prints the following:\n",
@@ -206,16 +206,8 @@
     "```\n",
     "with the call: `print_receipt(10.00, .05, .2)`\n",
     "<br>\n",
-    "You should use formatting for all of the numbers and equal signs."
+    "Use formatting for all of the numbers and equal signs."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cec690a5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
