--- a/IntroductionToPython/09-Lists.ipynb
+++ b/IntroductionToPython/09-Lists.ipynb
@@ -9,9 +9,9 @@
     "\n",
     "# Lists\n",
     "\n",
-    "In our lives, we regularly use lists - things to buy, stuff to do, etc.  As we use those lists, we add items to them, we remove items from them, and we change items.  \n",
+    "In our lives, we regularly use lists - things to buy, stuff to do, etc. As we use those lists, we add items, we remove items, and we change items.\n",
     "\n",
-    "Python provides a list data type. Lists are ordered sequences of items. Unlike arrays in other programming languages, lists can contain items of different types.\n",
+    "Python provides a list data type. Lists are ordered sequences of items. Unlike arrays in other programming languages, lists can contain items (objects, elements)  of different types.\n",
     "\n",
     "To define a list, use a comma separated list of zero or more values between square brackets."
    ]
@@ -45,7 +45,7 @@
    "source": [
     "## Indexing and Slicing\n",
     "\n",
-    "As lists are sequences, we can use the same operations that we used on strings for getting the length, indexing, and slicing."
+    "As lists are sequences, we can use the same operations we used on strings to get the length, indexing, and slicing."
    ]
   },
   {
@@ -85,7 +85,7 @@
    "metadata": {},
    "source": [
     "## Adding to a list\n",
-    "The `+` operation (concatenation), creates a new list.  To use concatenation, we must use another list"
+    "The `+` operation (concatenation) creates a new list by combining two lists."
    ]
   },
   {
@@ -116,7 +116,7 @@
    "id": "fd02872b",
    "metadata": {},
    "source": [
-    "Calling the `append()` method will add item to the end of the existng list."
+    "Calling the `append()` method will add an item to the end of the existing list."
    ]
   },
   {
@@ -136,9 +136,9 @@
    "id": "61834e06",
    "metadata": {},
    "source": [
-    "As you can see from that the IDs, new_list is still the same object, but we have added \"Virginia\" to the list by using `append()`.  However, the list contenation using `+` produced a new object.\n",
+    "As you can see from the IDs, new_list is still the same object, but we have added \"Virginia\" to the list using `append()`. However, the list concatenation  using the `+` operator produces a new object.\n",
     "\n",
-    "You can also add items to a list with the `extend()` method.  This will treat the argument as a sequence and add iterate through the sequence, adding each item to the list.\n",
+    "You can also add items to a list with the `extend()` method. This method treats the argument as a sequence and iterates through that sequence, adding each item to the list.\n",
     "\n",
     "Try adding Pittsburgh to `new_list` using `extend()`:"
    ]
@@ -160,11 +160,11 @@
    "id": "33555398",
    "metadata": {},
    "source": [
-    "Was the result what you expected?\n",
+    "Did you expect that result?\n",
     "\n",
-    "If `'P', 'i', 't', 't', 's', 'b', 'u', 'r', 'g', 'h'` was added, remember that strings are sequences, so `extend` iterated through the sequence, adding each element to new_list.\n",
+    "If `'P', 'i', 't', 't', 's', 'b', 'u', 'r', 'g', 'h'` appeared in the list, remember strings are sequences, so `extend()` iterated through the sequence, adding each element to new_list.\n",
     "\n",
-    "To use `extend()`, put the term into a list and then make the call."
+    "Usually to use `extend()`, put the term into a list (or use an existing list) and then make the call."
    ]
   },
   {
@@ -184,7 +184,7 @@
    "id": "204d6b35",
    "metadata": {},
    "source": [
-    "What happens if a list was passed to `append()`?"
+    "What happens if we pass a list to `append()`?"
    ]
   },
   {
@@ -203,7 +203,7 @@
    "id": "1908eec0",
    "metadata": {},
    "source": [
-    "The last element should be a list itself now.  Collection objects such as lists can be nested within each other."
+    "The last element should be a list itself;  collection objects such as lists can be nested within each other."
    ]
   },
   {
@@ -233,7 +233,7 @@
    "id": "328fa615",
    "metadata": {},
    "source": [
-    "Now, put \"Pittburgh\" into the list at the 6th position (i.e., between \"NCSU\" and \"Wake Forest\").  Remember indexes start at zero."
+    "Now, put \"Pittsburgh\" into the list at the 6th position (i.e., between \"NCSU\" and \"Wake Forest\").  Remember, indexes start at zero."
    ]
   },
   {
@@ -327,7 +327,7 @@
    "metadata": {},
    "source": [
     "## Searching for Values\n",
-    "To count the number of times a value exists in a list, use `count()`"
+    "To count the number of times a value exists in a list, use <code>count(<i>value</i>)</code>."
    ]
   },
   {
@@ -346,7 +346,7 @@
    "id": "035f5177",
    "metadata": {},
    "source": [
-    "To test if a value exists in a list use the `in` operator"
+    "To test if a value exists in a list, use the `in` operator."
    ]
   },
   {
@@ -375,7 +375,7 @@
    "id": "4ded971f",
    "metadata": {},
    "source": [
-    "To find the first index where an item occurs in a list, use `index()`.  The method raises a ValueError if the value does not exist in the list. Optionally, you can specify start and end indexes to limit the search."
+    "To find the first index where an item occurs in a list, use <code>index(<i>value</i>)</code>.  The method raises a ValueError if the value does not exist in the list. Optionally, you can specify start and end indexes to limit the search."
    ]
   },
   {
@@ -414,7 +414,7 @@
    "metadata": {},
    "source": [
     "## Sorting\n",
-    "To sort a list, use the `sort()` methods which puts the order into lexigraphical order.  Add the argument `reverse=True` to sort in reverse order"
+    "To sort a list, use the `sort()` method, which orders the list by lexicographical order. Add the argument `reverse=True` to sort in reverse order"
    ]
   },
   {
@@ -443,7 +443,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Sort acc_schools in descending order by adding the necessary statement\n",
+    "# Sort acc_schools in descending order by adding the necessary statement with an argument\n",
     "\n",
     "print(acc_schools)"
    ]
@@ -453,7 +453,7 @@
    "id": "12ccbce6",
    "metadata": {},
    "source": [
-    "Python offers a built-in function `sorted()` to sort iterables such as lists.  This returns a new list.  You can add the argument `reverse=True` to sort in descending order if needed."
+    "Python offers the built-in function `sorted()` to sort iterables such as lists.  This function returns a new list. In addition, you can add the argument `reverse=True` to sort in descending order."
    ]
   },
   {
@@ -511,7 +511,7 @@
    "source": [
     "A string is a sequence, so `sorted` processed that sequence of items into sorted order.\n",
     "\n",
-    "What happens you try to sort a list that has a mixture of different types?  Try sorting `mixed_listed` that we defined earlier."
+    "What happens when you try to sort a list with a mixture of different types? Try sorting `mixed_listed` that we defined earlier."
    ]
   },
   {
@@ -556,11 +556,15 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0815a401",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0dd08d7",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "new_list = acc_schools.copy()"
+    "acc_schools = [[\"Duke\", \"UNC\", \"NCSU\"], \"Notre Dame\",  \"Wake Forest\"] \n",
+    "new_list = acc_schools.copy()\n",
+    "new_list"
    ]
   },
   {
@@ -568,9 +572,13 @@
    "id": "af463339",
    "metadata": {},
    "source": [
-    "We can also perform a deepcopy of a list.  A deep copy will construct a new list and then recursively create new copies off all of the original contents and place those into the new list.  (We'll cover recursion in more detail in later notebooks.)\n",
+    "You should view this execution on [PythonTutor.com](https://pythontutor.com/render.html#code=acc_schools%20%3D%20%5B%5B%22Duke%22,%20%22UNC%22,%20%22NCSU%22%5D,%20%22Notre%20Dame%22,%20%20%22Wake%20Forest%22%5D%20%0Anew_list%20%3D%20acc_schools.copy%28%29&cumulative=false&curInstr=0&heapPrimitives=true&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false).\n",
     "\n",
-    "To perform a deep copy, we'll need to import the `copy` module and then call the `deepcopy()` function within that module."
+    "As you can see from that website, we now have two \"base\" lists, but the first element in both lists references the same list that contains the Research Triangle universities.\n",
+    "\n",
+    "We can also perform a deep copy of a list. A deep copy will construct a new list and then recursively create new copies of each element of the original list, placing that new copy into the new list. (We cover recursion in more detail in later notebooks.)\n",
+    "\n",
+    "To perform a deep copy, we need to import the `copy` module and then call the `deepcopy()` function within that module."
    ]
   },
   {
@@ -581,7 +589,19 @@
    "outputs": [],
    "source": [
     "import copy\n",
-    "new_list = copy.deepcopy(acc_schools)"
+    "\n",
+    "acc_schools = [[\"Duke\", \"UNC\", \"NCSU\"], \"Notre Dame\",  \"Wake Forest\"] \n",
+    "deep_copy = copy.deepcopy(acc_schools)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d0c766",
+   "metadata": {},
+   "source": [
+    "[View this execution on PythonTutor](https://pythontutor.com/render.html#code=import%20copy%0A%0Aacc_schools%20%3D%20%5B%5B%22Duke%22,%20%22UNC%22,%20%22NCSU%22%5D,%20%22Notre%20Dame%22,%20%20%22Wake%20Forest%22%5D%20%0Adeep_copy%20%3D%20copy.deepcopy%28acc_schools%29&cumulative=false&curInstr=0&heapPrimitives=true&mode=display&origin=opt-frontend.js&py=3&rawInputLstJSON=%5B%5D&textReferences=false)\n",
+    "\n",
+    "Notice how this produces a new list for the Research Triangle universities."
    ]
   },
   {
@@ -590,7 +610,7 @@
    "metadata": {},
    "source": [
     "## Comparing\n",
-    "Comparing two lists using boolean comparison operators (`<`,`<=`,`==`,`>=`,`>`) uses a lexicographical ordering. Initially, the first item of each of the two lists is compared.  If they differ, then this difference is the outcome. Otherwise, the next items in each list is compared and so forth.  If all items of the two lists are equal, then the lists are equal.  Then if one list is shorter than the other after comparing elements up to that point, then that list is considered smaller."
+    "Comparing two lists using boolean comparison operators (`<`,`<=`,`==`,`>=`,`>`) uses a lexicographical ordering. Initially, the interpreter compares the first items in each list. If they differ, then this difference is the outcome. Otherwise, the interpreter then compares the second items in each list. This comparison continues until the end of one list has reached. If all of the items in both lists are equal, then the lists are equal. Then if one list is shorter than the other after comparing elements up to that point, that list is considered smaller."
    ]
   },
   {
@@ -622,7 +642,7 @@
    "id": "2605e4c6",
    "metadata": {},
    "source": [
-    "Lists can also be used as an expression in `if` statements.  A non-empty list resolves to `True` and an empty list resolves to `False`."
+    "`if` statements can have a list as the conditional expression.  A non-empty list resolves to `True`, and an empty list resolves to `False`."
    ]
   },
   {
@@ -716,7 +736,7 @@
    "metadata": {},
    "source": [
     "## Nested Lists\n",
-    "In Python, we can nest lists - that is create a list of lists.  This is roughly comparable to creating multi-dimensional arrays in other programming languages. A common use case for this is to create matrix as a representation for specific data.\n",
+    "In Python, we can nest lists - that is, create a list of lists. Nested lists are roughly comparable to creating multidimensional arrays in other programming languages. A common use case for nested lists is creating a matrix representing some specific abstraction.\n",
     "\n",
     "For example, we could create a partially-completed tic-tac-toe board:"
    ]
@@ -760,7 +780,7 @@
    "id": "e04bb5fc",
    "metadata": {},
    "source": [
-    "While the above example shows a list of list of strings, realize that creating nested data structures can be arbitrarily.  For example, we could represent a [sudoku](https://en.wikipedia.org/wiki/Sudoku) board as a 9 by 9 matrix.  But then for each cell, we could hold a list of possible numbers that cell could possibly be assigned.\n",
+    "While the above example shows a list of strings, realize that creating nested data structures can be done arbitrarily. For instance, we could represent a [sudoku](https://en.wikipedia.org/wiki/Sudoku) board as a 9 by 9 matrix. But then, for each cell, we could hold a list of possible numbers that cell could be assigned.\n",
     "\n",
     "![](images/suduko.png)"
    ]
@@ -772,7 +792,7 @@
    "source": [
     "## Exercises\n",
     "\n",
-    "For the exercises 1 - 7, use the following list.  Use the Python functions and methods.\n",
+    "For exercises 1 - 7, use the following list.  Write code using Python functions and methods to answer the questions.\n",
     "`grades  = [87.6, 92.3, 84.5, 90.0, 86.0, 98.6]`\n",
     "\n",
     "1. How many elements are in the list?\n",
@@ -783,7 +803,7 @@
     "6. Concatenate this list to grades:  `[76.4, 99.2, 88.8]`\n",
     "7. Sort the list\n",
     "\n",
-    "8. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, join the list back together into a single string with words separated by a colon `:` and print the resulting string.\n"
+    "8. Write a short program that reads in a sentence from a user.  Then create a list of words (punctuation can be included as part of the words) by separating the words/characters by whitespace.  Then reverse the list. Finally, combine the list into a single string with words separated by a colon and print the resulting string.\n"
    ]
   }
  ],
