--- a/IntroductionToPython/10-Tuples.ipynb
+++ b/IntroductionToPython/10-Tuples.ipynb
@@ -8,34 +8,53 @@
     "<div class=\"pagebreak\"></div>\n",
     "\n",
     "# Tuples\n",
-    "Tuples are sequences of values just like a list - the biggest difference is that tuples are immutable while lists are mutable.  In other words, we can not modify the sequence of values - any change creates a new tuple object.  \n",
+    "Tuples are sequences of values just like a list - the most significant difference is that tuples are immutable while lists are mutable.  In other words, we cannot modify the sequence of values - any change creates a new tuple object.  \n",
     "\n",
-    "Unlike lists, tuples are hashable so we can use them as keys within a dictionary (to be covered in a later notebook).\n",
+    "Unlike lists, tuples are hashable, so we can use them as keys within a dictionary (to be covered in a later notebook).\n",
     "\n",
-    "Tuple indexing, slicing, and comparison function identically to lists.\n",
+    "Tuple indexing, slicing, and comparison perform the same as they do for lists.\n",
     "\n",
-    "To create a tuple, use a sequence of values separated by a comma.  Although not neccessary, the Python convention is to enclose tuples in parentheses. This makes identification of tuples easier while reading code.\n",
+    "To create a tuple, use a sequence of values separated by a comma. Although not necessary, the Python convention is to enclose tuples in parentheses to make the identification of tuples easier while reading code.\n",
     "\n",
     "Also, as you can see below, both the interpreter and `print()` output parenthesis when displaying tuples."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b2591d9d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3, 5, 7, 11, 13, 17, 19)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "primes = 1,2,3,5,7,11,13,17,19\n",
+    "primes = 1,2,3,5,7,11,13,17,19   # not preferred, use paranthesis\n",
     "primes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "75b7467a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Duke', 'Notre Dame', 'UNC', 'NCSU', 'Wake Forest', 'Clemson')\n"
+     ]
+    }
+   ],
    "source": [
     "acc_schools = (\"Duke\", \"Notre Dame\", \"UNC\", \"NCSU\", \"Wake Forest\", \"Clemson\")\n",
     "print(acc_schools)"
@@ -43,10 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "566790a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 5, 7, 11, 13, 17, 19, 23)\n"
+     ]
+    }
+   ],
    "source": [
     "primes = primes + tuple([23])\n",
     "print(primes)"
@@ -62,10 +89,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "37d87560",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Death', 'Destruction', 'Pestilence', 'Famine')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_horseman = ['Death','Destruction','Pestilence','Famine']\n",
     "tuple(four_horseman)"
@@ -89,10 +127,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "ad6d2bf2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Death', 'Destruction', 'Pestilence', 'Famine')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "('Death','Destruction','Pestilence') + ('Famine',)"
    ]
@@ -102,15 +151,27 @@
    "id": "124d8e01",
    "metadata": {},
    "source": [
-    "Notice that we had to use a comma `,` with nothing after it so that the Python would intepret the second expression as a tuple.  See what happens without the comma - "
+    "Notice that we had to use a comma `,` with nothing after it so that the Python interpreter parses the second expression as a tuple. See what happens without the comma -"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8ec1efce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate tuple (not \"str\") to tuple",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDeath\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mDestruction\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mPestilence\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mFamine\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate tuple (not \"str\") to tuple"
+     ]
+    }
+   ],
    "source": [
     "('Death','Destruction','Pestilence') + ('Famine')         #Raises a TypeError"
    ]
@@ -134,10 +195,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "6927fb8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(primes)"
    ]
@@ -147,7 +219,7 @@
    "id": "1f5a773d",
    "metadata": {},
    "source": [
-    "The `tuple` class has far fewer methods than `list` - just `count()` and `index()` which function the same between the two types.\n",
+    "The `tuple` class has far fewer methods than the `list` class - only `count()` and `index()`, which function similarly between the two types. Why do you think fewer methods exist for tuples?\n",
     "\n",
     "## Indexing"
    ]
@@ -170,17 +242,25 @@
    "source": [
     "## Tuple assignment\n",
     "\n",
-    "Python is one a of a growing number of languages that allow for multiple assignments to variables on the left side of an assignment statement.  By using a sequence such as a tuple or list on the left hand side, you can assign more than one variable at a time.  We saw an example of this earlier with the `divmod()` function that returns a tuple of the quotient and remainder."
+    "Python allows multiple assignments to variables on the left side of an assignment statement. For example, using a tuple or list on the left-hand side of the assignment operator, you can assign more than one variable at a time. We saw this example earlier with the `divmod()` function that returns a tuple of the quotient and remainder."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "676c8c1b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "quotient=3, remainder=1\n"
+     ]
+    }
+   ],
    "source": [
-    "quotient, remainder = divmod(10,3)\n",
+    "quotient, remainder = divmod(10,3)         # paranthesis are optial for tuples.\n",
     "print(\"quotient={:d}, remainder={:d}\".format(quotient,remainder))"
    ]
   },
@@ -189,17 +269,26 @@
    "id": "efd8d190",
    "metadata": {},
    "source": [
-    "Formally, this is called [parallel assignment](https://en.wikipedia.org/wiki/Assignment_(computer_science)#Parallel_assignment).\n",
+    "Formally, this is called [parallel assignment](https://en.wikipedia.org/wiki/Assignment_(computer_science)#Parallel_assignment).  More commonly, this is known as tuple unpacking in Python.\n",
     "\n",
-    "In addition to allowing multiple return variables from a function, an ingenious use of tuple assignment is to swap the value of two variables in a single time. Many other languages require a temporary variable."
+    "In addition to allowing multiple return variables from a function, a clever usage of tuple assignment is swapping the value of two variables simultaneously. Many other languages require a temporary variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "98fe5235",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a=7, b=5\n",
+      "a=5, b=7\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
     "b = 7\n",
@@ -218,9 +307,11 @@
    "id": "11822ac8",
    "metadata": {},
    "source": [
-    "In `a, b = b, a`, both sides of the assignment are tuples.  The right side is a tuple of expressions which is evaluated completely before any assignments are made to the tuples of variables on the left.  The sizes of both tuples must be the same.\n",
+    "Both sides of the assignment are tuples in `a, b = b, a`. The Python interpreter evaluates the expressions on the right-hand side of the assignment operator from left to right. Once the interpreter evaluates those expressions, the interpreter makes the assignments to the tuple of variables on the left-hand side. The length of both tuples must be equal.\n",
     "\n",
-    "Technically, the right side can contain any kind of a sequence.  As an example, we can split an email address into two parts by using the '@' symbol."
+    "Technically, the right side can contain any sequence, even a string.\n",
+    "\n",
+    "For example, we can split an email address into two parts using the '@' symbol to split the string."
    ]
   },
   {
@@ -241,14 +332,14 @@
    "metadata": {},
    "source": [
     "## Sequences Redux \n",
-    "So far we have seen three different types of sequences - strings, lists, and tuples. In some cases, it is possible to use the tpyes interchangeably (albeit less so with strings as compared to lists and tuples).\n",
+    "So far, we have seen three types of sequences - strings, lists, and tuples. In some cases, it is possible to use the types interchangeably (albeit less so with strings than lists and tuples).\n",
     "\n",
     "So how do we choose when to use a particular sequence type?\n",
-    "- Strings are the most limited as they are sequence of characters and immutable.  If you are just representing text, they are the perfect choice.  However, if you need to change the characters in a string, then a list of characters might work.\n",
+    "- Strings are the most limited as a sequence of characters and immutable.  If you are just representing text, they are the perfect choice.  However, if you need to change the characters in a string, then a list of characters might work.\n",
     "- Lists tend to be used more often than tuples as they are mutable.\n",
-    "- In return statements, it is generally simpler to create a tuple than a list.\n",
-    "- If you need to use a sequence as a dictionary key, you have to use an immutable type (string,tuple)\n",
-    "- If you are passing arguments to a function, using tuples can reduce to possibility of unwanted side effects as they can not be modified and their values remain unchanged to the caller.\n"
+    "- It is generally simpler to create a tuple than a list in return statements.\n",
+    "- If you need to use a sequence as a dictionary key, you have to use an immutable type (string, tuple)\n",
+    "- If you pass arguments to a function, tuples can reduce the possibility of unwanted side effects as they are immutable. If the function changes the tuple (which creates a new tuple), the caller still references the original tuple when the function exits.\n"
    ]
   },
   {
@@ -257,15 +348,23 @@
    "metadata": {},
    "source": [
     "## Exercises\n",
-    "1. Given the following tuple assigned to the variable `data` - ('AAPL', 157.96, 88_140_000). Assign the items to three variables(symbol,price, and volume) and then print the values.\n",
+    "1. Given the following tuple assigned to the variable `data` - ('AAPL', 157.96, 88_140_000). Assign the items to three variables(symbol, price, and volume) and print the values.\n",
     "\n",
     "2. Test if the stock symbol \"BAC\" is in the data tuple.\n",
     "\n",
-    "3. Using the following tuple, create a new tuple of the 3rd to 5th elements.<br>\n",
-    "```\n",
-    "acc_schools = (\"Duke\", \"Notre Dame\", \"UNC\", \"NCSU\", \"Wake Forest\", \"Clemson\")\n",
-    "```"
+    "3. Create a new tuple of the 3rd to 5th elements using the following tuple.<br>\n",
+    "   ```\n",
+    "   acc_schools = (\"Duke\", \"Notre Dame\", \"UNC\", \"NCSU\", \"Wake Forest\", \"Clemson\")\n",
+    "   ```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9a82c62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
